--- a/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
+++ b/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
@@ -85,7 +85,7 @@ datepicker,
 
 ._720kb-datepicker-calendar-day:hover,
 ._720kb-datepicker-calendar-day._720kb-datepicker-active {
-    background: rgb(230, 0, 135) !important;
+    background: rgb(230, 0, 138) !important;
     color: #fff !important;
 }
 
@@ -388,6 +388,14 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
 .off-white-section {
     background-color: rgb(250, 250, 250) !important;
 }
+.pink-section {
+    background-color: rgb(230, 0, 138) !important;
+    color: #fff;
+}
+.pink-section .popular-hosts {
+    color: #fff !important;
+    margin-bottom: 20px;
+}
 .modal-title {
     text-align: center;
 }
@@ -439,14 +447,14 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     margin: 0;
     width: 100%;
 }
-#room-carousel-loader {
+.room-carousel-loader {
     margin: 20px 0;
 }
 #popular-hosts-container .default-theme.wp-posts-carousel .wp-posts-carousel-container {
     padding: 0;
 }
 .all-hosts-link {
-    font-size: 25px;
+    font-size: 18px;
     margin-bottom: 15px;
 }
 .default-theme.wp-posts-carousel .owl-controls .owl-nav div {
@@ -755,6 +763,95 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     max-width: 100%;
     width: 100%;
     height: auto
+}
+#meetrd-fans {
+    text-align: center;
+    margin: 0 auto;
+    width: 92%;
+    padding-bottom: 15px;
+}
+#meetrd-fans .fan-logo {
+    width: 12.5%;
+    position: relative;
+    padding: 0 20px;
+    display: inline-block;
+    /*    min-height: 100px;*/
+}
+#meetrd-fans .fan-logo img {
+    width: 100%;
+    height: auto;
+    /*
+     width: 90%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+*/
+}
+.push-up {
+    padding-bottom: 10px;
+}
+.push-down {
+    padding-top: 10px;
+}
+.flip-up {
+    transform: rotate(-2deg);
+}
+.flip-down {
+    transform: rotate(2deg);
+}
+#cities {
+    padding: 50px 0;
+    margin: 0 -10px;
+}
+#cities .popular-hosts {
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+#cities .city-container {
+    text-align: center;
+}
+#cities .city-container .city-name {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    background-color: rgba(255, 255, 255, 0.6);
+    text-transform: uppercase;
+    padding: 10px 0;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
+    width: 80%;
+}
+#cities .city-container img {
+    width: 100%;
+    height: auto;
+    max-width: 100%;
+    margin-bottom: 5px;
+}
+#step-number-container {
+    padding-bottom: 30px;
+    padding-top: 20px;
+    text-align: center;
+    text-align-last: center;
+}
+#step-number-container .step-number-content {
+    max-width: 350px;
+    margin: 0 auto;
+}
+#step-number-container .step-number {
+    font-size: 80px;
+}
+#step-number-container .buffer-top-desktop {
+    padding-top: 40px;
+}
+#step-number-container .pull-up {
+    margin-top: -10px;
+}
+#step-number-container a {
+    color: #fff !important;
+    font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
+}
+#room-carousel {
+    padding: 30px 0;
 }
 
 /*single-room.php*/
@@ -1492,6 +1589,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     .meetrd-footer-container .social-media-container i {
         margin: 0 5px !important;
     }
+    
+    #step-number-container .buffer-top-desktop {
+        padding-top: 0;
+    }
 }
 @media(min-width: 768px) {
     .custom-tab {
@@ -1534,7 +1635,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     }
     
     .newsletter {
-        padding-top: 70px;
+        padding-top: 20px;
     }
     
     .search-result-room-container {
@@ -1594,7 +1695,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     }
     
     .newsletter {
-        padding-top: 70px;
+        padding-top: 20px;
         text-align: center;
     }
     
@@ -1649,6 +1750,14 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     .meetrd-footer-container .social-media-container {
         min-height: 1px;
         padding-bottom: 20px;
+    }
+    
+    #cities .city-container .city-name {
+        font-size: 25px !important;
+    }
+    
+    #step-number-container .buffer-top-desktop {
+        padding-top: 0;
     }
 }
 @media(max-width: 990px) {
@@ -1727,6 +1836,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     .meetrd-footer-container .social-media-container i {
         margin: 0 10px;
     }
+    
+    #cities .city-container .city-name {
+        font-size: 20px;
+    }
 }
 @media (max-width: 991px) {
     .booking-container {
@@ -1759,6 +1872,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     
     .meetrd-footer-container .social-media-container i {
         margin: 0 10px;
+    }
+    
+    #cities .city-container .city-name {
+        font-size: 20px;
     }
 }
 @media(min-width: 991px) {
@@ -1807,6 +1924,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     .host-banner-slogan {
         font-size: 18px;
     }
+    
+    #cities .city-container .city-name {
+        font-size: 20px;
+    }
 }
 @media(min-width: 1200px) {
     .host-banner-slogan {
@@ -1816,6 +1937,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
 @media(min-width: 1200px) {
     .blog-banner-slogan {
         font-size: 26px;
+    }
+    
+    #cities .city-container .city-name {
+        font-size: 25px;
     }
 }
 @media (max-width: 1200px) {
@@ -1873,11 +1998,12 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     font-size: 13px!important;
 }
 .newsletter-container {
-    max-height: 300px;
+    max-height: 200px;
     text-align: center;
 }
 .newsletter-height {
-    max-height: 300px;
+    max-height: 200px;
+    background-color: rgb(230, 0, 138);
 }
 .area {
     font-size: 14px!important;
