--- a/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
+++ b/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
@@ -398,6 +398,9 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     color: #fff !important;
     margin-bottom: 20px;
 }
+.modal-dialog {
+    margin-top: 60px !important;
+}
 .modal-title {
     text-align: center;
 }
