--- a/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
+++ b/wp-content/themes/meetrd/layouts/meetrd-custom-style.css
@@ -601,27 +601,38 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     background-size: cover;
 }
 .heading-text {
-    text-align: center;
-    color: #fff;
+    text-align: left;
+    /*    color: #fff;*/
+    
     padding-left: 20px;
     padding-right: 20px;
 }
 .heading-text h1 {
     text-transform: uppercase;
-    color: #fff;
+    /*    color: #fff;*/
+    
     margin-bottom: 5px;
     font-weight: 300;
-    text-shadow: 0px 0px 7px rgba(50, 50, 50, 0.5);
+    /*    text-shadow: 0px 0px 7px rgba(50, 50, 50, 0.5);*/
+    
     margin-bottom: 5px;
     letter-spacing: 2px;
 }
 .heading-text h2 {
-    color: #fff;
+    /*    color: #fff;*/
+    
     margin-bottom: 5px;
     font-weight: 300;
-    text-shadow: 0px 0px 7px rgba(50, 50, 50, 0.5);
+    /*    text-shadow: 0px 0px 7px rgba(50, 50, 50, 0.5);*/
+    
     margin-top: 30px;
     margin-bottom: 30px;
+}
+.btn-container-start {
+    padding: 20px 0 40px 0;
+}
+.heading-text span.highlight {
+    color: rgb(230, 0, 138);
 }
 .three-steps-container {
     text-align: center;
@@ -659,10 +670,10 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     opacity: 0.4;
 }
 .popular-hosts {
-    font-size: 30px;
+    font-size: 26px;
     margin-top: 30px;
     text-align: center;
-    color: black;
+    color: rgb(35, 35, 35);
     font-family: "Raleway Bold", Open Sans, Helvetica, sans-serif!important;
     font-weight: 300;
 }
@@ -806,6 +817,11 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     left: 0;
 */
 }
+#meetrd-fans h3 {
+    padding-top: 0;
+    font-size: 26px;
+    font-weight: 300;
+}
 .push-up {
     padding-bottom: 10px;
 }
@@ -819,7 +835,7 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
     transform: rotate(2deg);
 }
 #cities {
-    padding: 50px 0;
+    padding: 30px 0 50px 0;
     margin: 0 -10px;
 }
 #cities .popular-hosts {
@@ -880,6 +896,11 @@ input .form-control .ng-pristine .ng-valid .ng-valid-min .ng-touched {
 }
 .single-room-img img {
     width: 100%;
+}
+.alo_easymail_widget h3 {
+    font-size: 26px;
+    font-weight: 300;
+    text-shadow: none;
 }
 .alo_easymail_widget_form {}
 .alo_easymail_widget_form .input-text {}
@@ -1716,7 +1737,7 @@ h3.edit-room-heading {}
     }
     
     .heading-text {
-        padding-top: 60px;
+        padding-top: 40px;
     }
     
     .heading-text h1 {
@@ -1780,15 +1801,20 @@ h3.edit-room-heading {}
     }
     
     .heading-text {
-        padding-top: 50px;
+        /*        padding-top: 50px;*/
     }
     
     .heading-text h1 {
-        font-size: 25px;
+        font-size: 32px !important;
     }
     
     .heading-text h2 {
-        font-size: 15px;
+        font-size: 20px !important;
+        margin: 15px 0;
+    }
+    
+    .btn-container-start {
+        padding: 25px 0 0 0;
     }
     
     .newsletter {
@@ -1833,7 +1859,7 @@ h3.edit-room-heading {}
     }
     
     .popular-hosts {
-        font-size: 24px;
+        font-size: 26px;
     }
     
     .search-form-container {
@@ -1969,15 +1995,15 @@ h3.edit-room-heading {}
     }
     
     .heading-text {
-        padding-top: 40px;
+        padding-top: 20px;
     }
     
     .heading-text h1 {
-        font-size: 25px;
+        font-size: 40px;
     }
     
     .heading-text h2 {
-        font-size: 20px;
+        font-size: 25px;
     }
     
     #meetrd-fans .fan-logo {
